# resume_website

./: .gitignore  AGENTS.md  README.md  about_me  backend.py  cli.py  config.py  directive.txt  graph.py  llm.py  main.py  package.json  personality.txt  pnpm-lock.yaml  pyproject.toml  requirements.txt  test.py  work_history  work_history_concise
backend/chatbot/: README.md  __init__.py  main.py
backend/chatbot/config/: __init__.py  settings.py
backend/chatbot/graph/: __init__.py  graph_builder.py
backend/chatbot/handlers/: __init__.py  stream_handler.py
backend/chatbot/models/: __init__.py  state.py
backend/chatbot/nodes/: __init__.py  chatbot_node.py
database/: __init__.py  collections.py  db.py  demo.py
frontend/: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx
frontend/src/components/ChatPanel/: ChatPanel.jsx
frontend/src/pages/Home/: Home.jsx
frontend/src/styles/: globalStyles.js
frontend/src/theme/: theme.js
graphs/interactive_mode/: graph.py  llm.py  personality.txt  state.py
graphs/interactive_mode/nodes/: chatbot_node.py  custom_tool_node.py  tool_node.py  user_interrupt_node.py
graphs/interactive_mode/tools/: __init__.py  resume_tool.py  retrieve_interview_answer_tool.py  user_interrupt_tool.py
graphs/interviewer/: graph.py  llm.py  personality.txt
graphs/interviewer/nodes/: chatbot_node.py
nodes/: chatbot_node.py  tool_node.py
resumes/: Backend Engineer  Default Resume  DevOps Engineer  Full-Stack Engineer  Senior Python Engineer
tools/: __init__.py  resume_tool.py
(+6 files in other folders)
